apps/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: flux-system
spec:
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: web-ui
      port: 5380
      protocol: TCP
      targetPort: 5380
  selector:
    app: technitium
